# toen-gen

./: .gitignore  .replit  DEPLOYMENT_GUIDE.md  README.md  app.py  app.yaml  batch_process_tokens.py  debug_api_status.py  debug_detailed_error.py  debug_real_like_sending.py  deploy.py  generate_all_tokens.py  generate_fresh_token.py  generate_full_tokens.py  generate_max_tokens.py  generate_secret.py  ind_tokens_success.json  like_pb2.py  main.py  my_pb2.py  netlify.toml  output_pb2.py  process_credentials.py  process_ind_credentials.py  pyproject.toml  quick_test.py  replit.md  test_all_tokens_like.py  test_bulk_sample.json  test_different_player.py  test_different_servers.py  test_enhanced_like_system.py  test_fresh_player.py  test_like_2926998273.py  test_like_feature.py  test_like_send.py  test_one_token_per_like.py  test_player_2160677649.py  test_player_info_2926998273.py  test_proper_tokens.py  (+7 more)
attached_assets/: Guest acc (1)_1752637081368.txt  Pasted--token-eyJhbGciOiJIUzI1NiIsInN2ciI6IjMiLCJ0eXAiOiJKV1QifQ-eyJhY2NvdW50X2lkIjoxMTExNDQ0N-1752640070080_1752640070088.txt  Pasted-eyJhbGciOiJIUzI1NiIsInN2ciI6IjEiLCJ0eXAiOiJKV1QifQ-eyJhY2NvdW50X2lkIjoxMjYwMDg4MTMyNiwibmlja25hbWUiO-1752640452216_1752640452222.txt  credentials_1752637081369.json  encryption_1752645931229.py  ind_1752645937675.json  jwtgen_1752644864515.py  like_count_pb2_1752645919802.py  like_pb2_1752645919803.py  main_1752645914852.py  phantoms_tokens_20250716_043031_1752640265056.json  protobuf_handler_1752645931230.py  request_handler_1752645931231.py  requirements_1752645914854.txt  (+3 more)
tokens/: ind.json
(+13 files in other folders)
