[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "email-validator>=2.2.0",
    "flask-caching>=2.3.1",
    "flask>=3.1.1",
    "flask-sqlalchemy>=3.1.1",
    "gunicorn>=23.0.0",
    "psycopg2-binary>=2.9.10",
    "werkzeug>=3.1.3",
    "flask-limiter>=3.12",
    "requests>=2.32.4",
    "pycryptodome>=3.23.0",
    "protobuf>=6.31.1",
    "colorama>=0.4.6",
    "urllib3>=2.5.0",
    "aiohttp>=3.12.14",
]
